--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -66,7 +66,8 @@ javac.classpath=\
     ${file.reference.Bras_FortMobile-override}:\
     ${file.reference.impl-cls}:\
     ${file.reference.impl-stubs}:\
-    ${file.reference.sendgrid-java-latest.jar}
+    ${file.reference.sendgrid-java-latest.jar}:\
+    ${libs.MySQLDriver.classpath}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 file.reference.native-internal_tmp=native/internal_tmp
